post api 로직 변경